--- a/index.html
+++ b/index.html
@@ -23,6 +23,51 @@
                 <span class="color-green">P</span>ortfolio
             </a>
         </h1>
+    </header>
+
+    <!--
+        mainタグの作成
+        ・profile用とwork用の箱を作成する
+        →divタグを使って行きます
+    -->
+    <div class="block-main">
+        <!--
+            profileの箱
+        -->
+        <div class="box-profile">
+            <h2 class="sub-title"> 
+                <span class="color-green">P</span>rofile
+            </h2>
+            <div class="item-list">
+                <img src="img/女性プロフィール画像@2x.png" alt="プロフィール画像">
+                <b>入交　聡子</b>
+                <p class="color-green">HTML / CSS / PHP / MySQL / Laravel / Adobe XD</p>
+                <P>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</P>
+            </div>    
+            <ul class="icon-list">
+                <li>
+                    <a href="">
+                        <img src="img/github.png" alt="Githubのアイコン">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="img/twitter.png" alt="Twitterアイコン">
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+
+        <!--
+            workの箱
+        -->
+        <div>
+
+        </div>
+
+    </div>
     
 </body>
 </html>
