--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         ・ロゴの設定をします
         ・h1タグとaタグとspanタグを使って行きます
     -->
-    <header>
-        <h1 class="block-header">
+    <header class="block-header">
+        <h1>
             <a href="">
                 <span class="color-green">P</span>ortfolio
             </a>
@@ -63,11 +63,52 @@
         <!--
             workの箱
         -->
-        <div>
-
+        <div class="box-works">
+            <h2 class="sub-titel">
+                <span class="color-green">W</span>orks
+            </h2>
+        
+            <ul class="works-list">
+                <li>
+                    <img src="img/スクリーンショット .png" alt="Tweterクローンの画像">
+                    <h3>Tweterクローン</h3>
+                    <span>HTML / CSS / PHP / MySQL</span>
+                    <div class="link">
+                        <a href="">Webサイト</a>
+                        <a href="">Github</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="img/スクリーンショット .png" alt="Tweterクローンの画像">
+                    <h3>Tweterクローン</h3>
+                    <span>HTML / CSS / PHP / MySQL</span>
+                    <div class="link">
+                        <a href="">Webサイト</a>
+                        <a href="">Github</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="img/スクリーンショット .png" alt="Tweterクローンの画像">
+                    <h3>Tweterクローン</h3>
+                    <span>HTML / CSS / PHP / MySQL</span>
+                    <div class="link">
+                        <a href="">Webサイト</a>
+                        <a href="">Github</a>
+                    </div>
+                </li>
+            </ul>
         </div>
 
     </div>
-    
+
+    <!--
+        footerタグの作成
+        ・copyrightの設定
+        →Pタグを使います
+    -->
+    <footer class="block-footer">
+        <P>Copyright ©️ TECH I.S., Inc.</P>
+    </footer>
+
 </body>
 </html>
