--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <span class="color-green">P</span>rofile
             </h2>
             <div class="item-list">
-                <img src="img/女性プロフィール画像@2x.png" alt="プロフィール画像">
+                <img src="img/女性プロフィール画像@2x.png" alt="プロフィール画像">
                 <b>入交　聡子</b>
                 <p class="color-green">HTML / CSS / PHP / MySQL / Laravel / Adobe XD</p>
                 <P>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</P>
