--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="img/女性プロフィール画像@2x.png" alt="プロフィール画像">
                 <b>入交　聡子</b>
                 <p class="color-green">HTML / CSS / PHP / MySQL / Laravel / Adobe XD</p>
-                <P>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</P>
+                <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
             </div>    
             <ul class="icon-list">
                 <li>
@@ -68,7 +68,7 @@
             workの箱
         -->
         <div class="box-works">
-            <h2 class="sub-titel">
+            <h2 class="sub-title">
                 <span class="color-green">W</span>orks
             </h2>
         
